--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 @import 'flex';
 @import 'grid';
 @import 'layout';
-@import 'link-gradient';
+@import 'text-gradient';
 @import 'notifications';
 @import 'rechart';
 @import 'slider';
