(add) more tab styling

--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -3,6 +3,8 @@
   --theme-color-2: #ff9574;
   --theme-color-3: #ff4c8c;
   --theme-color-4: #686868;
+  --theme-color-5: #505050;
+  --theme-color-6: #ff5c87;
 
   --theme-text-color: #000;
   --theme-light-text-color: #666;
