--- a/src/components/antd/select/s.module.scss
+++ b/src/components/antd/select/s.module.scss
@@ -1,116 +1,29 @@
-@import 'src/styles/text';
-
-.component:global(.ant-select.ant-select-single) {
-  min-height: 48px;
-  position: relative;
-  padding: 1px;
-  border-radius: 4px;
-
-  &:global(.ant-select-focused) {
-    :global(.ant-select-selector) {
-      box-shadow: none !important;
-      border-color: var(--theme-border-color) !important;
-    }
-  }
-
-  &:hover {
-    background: var(--gradient-secondary-pink);
-  }
-
-  &:global(.ant-select-sm) {
-    height: 32px;
-
-    :global(.ant-select-selector) {
-      height: 32px;
-      padding: 4px 24px 4px 16px;
-    }
-  }
-
-  &:global(.ant-select-lg) {
-    height: 64px;
-
-    :global(.ant-select-selector) {
-      height: 64px;
-      padding: 20px 32px 20px 24px;
-    }
-  }
-
-  &:global(.ant-select-open) {
-    background: var(--gradient-secondary-pink);
-
-    :global(.ant-select-arrow) svg {
-      transform: rotate(-180deg);
-    }
-
-    :global(.ant-select-selector) {
-      background: var(--theme-card-color);
-      box-shadow: none;
-      border-color: var(--theme-border-color) !important;
-      border-radius: 4px;
-    }
-  }
-
-  :global(.ant-select-selector) {
-    background: var(--theme-card-color);
-    border: 1px solid var(--theme-border-color);
+.button {
+  &:global(.ant-select:not(.ant-select-customize-input)) {
     height: 48px;
-    padding: 12px 32px 12px 16px;
-    border-radius: 4px;
 
-    :global(.ant-select-selection-item),
-    :global(.ant-select-selection-placeholder) {
-      @include font-p1-regular;
-      color: var(--theme-primary-color);
+    :global(.ant-select-selector) {
+      align-items: center;
+      background-color: var(--theme-color-select);
+      border-radius: 4px;
+      border: none;
+      color: var(--theme-text-color);
+      display: flex;
+      height: 100%;
+      padding: 0 16px;
     }
-  }
 
-  :global(.ant-select-arrow) {
-    height: 24px;
-    margin: 0;
-    right: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 24px;
-
-    :global(.ant-spin) {
-      margin-top: 4px;
+    :global(.fill) {
+      fill: var(--theme-color-5);
     }
   }
 }
 
-.dropdown:global(.ant-select-dropdown) {
-  background: var(--theme-tooltip-bg);
-  border: 1px solid var(--theme-tooltip-bg);
-  border-radius: 4px;
-  padding: 4px;
+.dropdown {
+  z-index: 12356;
   pointer-events: all !important;
+}
 
-  .option {
-    height: 48px;
-    padding: 12px;
-    border-radius: 4px;
-
-    &:global(.ant-select-item-option-selected) {
-      background: transparent;
-      color: var(--theme-primary-color);
-    }
-
-    :global(.ant-select-item-option-selected .ant-select-item-option-content) {
-      @include font-p2-regular;
-      color: var(--theme-primary-color);
-    }
-
-    :global(.ant-select-item-option-content) {
-      @include font-p2-semi-500;
-      color: var(--theme-secondary-color);
-    }
-
-    &:global(.ant-select-item-option-active) {
-      background: var(--theme-tooltip-item-bg-active);
-
-      :global(.ant-select-item-option-content) {
-        color: var(--theme-primary-color);
-      }
-    }
-  }
+.option {
+  z-index: 12356;
 }
