--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -6,6 +6,8 @@
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
 
+  --theme-color-select: #171717;
+
   --theme-text-color: #fff;
   --theme-light-text-color: #b5b5b5;
 
