--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -6,6 +6,8 @@
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
 
+  --theme-color-select: #171717;
+
   --theme-text-color: #000;
   --theme-light-text-color: #666;
 
