--- a/src/components/antd/select/s.module.scss
+++ b/src/components/antd/select/s.module.scss
@@ -5,25 +5,31 @@
     :global(.ant-select-selector) {
       align-items: center;
       background-color: var(--theme-color-select);
+      border: 1px solid transparent;
       border-radius: 4px;
-      border: none;
       color: var(--theme-text-color);
       display: flex;
       height: 100%;
       padding: 0 16px;
+      transition: border-color 0.1s linear;
     }
 
     :global(.fill) {
       fill: var(--theme-color-5);
     }
   }
-}
 
-.dropdown {
-  z-index: 12356;
-  pointer-events: all !important;
+  // this is terrible
+  &:global(.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)) {
+    :global(.ant-select-selector) {
+      box-shadow: none;
+      border-color: var(--theme-color-6);
+    }
+  }
 }
 
 .option {
-  z-index: 12356;
+  &:global(.ant-select-item-option-selected:not(.ant-select-item-option-disabled)) {
+    background-color: var(--theme-color-1);
+  }
 }
