(add) right button to table

--- a/src/components/antd/button-outline-gradient/s.module.scss
+++ b/src/components/antd/button-outline-gradient/s.module.scss
@@ -36,6 +36,7 @@
       justify-content: center;
       line-height: 1.2;
       position: relative;
+      text-transform: capitalize;
       width: 100%;
       z-index: 5;
     }
