--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,6 +46,7 @@ body[data-fixed='true'] {
   overflow: hidden;
   position: relative;
   width: 100%;
+  z-index: 0;
 
   &::before {
     --dimensions: 900px;
