--- a/src/components/custom/info-blocks-grid/s.module.scss
+++ b/src/components/custom/info-blocks-grid/s.module.scss
@@ -14,7 +14,7 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  // @media (max-width: #{$max-width-mobile}) {
-  //   grid-template-columns: 1fr;
-  // }
+  @media (max-width: #{$max-width-mobile}) {
+    grid-template-columns: 1fr;
+  }
 }
