--- a/src/components/antd/table/s.module.scss
+++ b/src/components/antd/table/s.module.scss
@@ -13,26 +13,26 @@
     }
   }
 
-  :global(.ant-table-thead) {
-    & > tr > th {
-      background-color: transparent;
-      color: var(--theme-light-text-color);
-      font-size: 12px;
-      font-weight: 500;
-      line-height: 1.2;
-      padding: 18px var(--padding-horizontal);
+  // TH
+  :global(.ant-table-thead > tr > th) {
+    background-color: transparent;
+    color: var(--theme-light-text-color);
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.2;
+    padding: 18px var(--padding-horizontal);
+    white-space: nowrap;
 
-      &:first-child {
-        padding-left: var(--padding-horizontal-start-end);
-      }
+    &:first-child {
+      padding-left: var(--padding-horizontal-start-end);
+    }
 
-      &:last-child {
-        padding-right: var(--padding-horizontal-start-end);
-      }
+    &:last-child {
+      padding-right: var(--padding-horizontal-start-end);
+    }
 
-      &:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan]):before {
-        display: none;
-      }
+    &:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan]):before {
+      display: none;
     }
   }
 }
