--- a/src/components/antd/table/s.module.scss
+++ b/src/components/antd/table/s.module.scss
@@ -1,5 +1,17 @@
 @import 'src/styles/text';
 
+@mixin cell-padding() {
+  padding: 18px var(--padding-horizontal);
+
+  &:first-child {
+    padding-left: var(--padding-horizontal-start-end);
+  }
+
+  &:last-child {
+    padding-right: var(--padding-horizontal-start-end);
+  }
+}
+
 .component {
   --padding-horizontal-start-end: 24px;
   --padding-horizontal: 10px;
@@ -20,19 +32,23 @@
     font-size: 12px;
     font-weight: 500;
     line-height: 1.2;
-    padding: 18px var(--padding-horizontal);
     white-space: nowrap;
 
-    &:first-child {
-      padding-left: var(--padding-horizontal-start-end);
-    }
-
-    &:last-child {
-      padding-right: var(--padding-horizontal-start-end);
-    }
+    @include cell-padding();
 
     &:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan]):before {
       display: none;
     }
+  }
+
+  // TD
+  :global(.ant-table-tbody > tr > td) {
+    border-bottom: 1px solid var(--theme-border-color);
+    color: var(--theme-text-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.2;
+
+    @include cell-padding();
   }
 }
