--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -11,6 +11,10 @@
   --theme-text-color: #fff;
   --theme-light-text-color: #b5b5b5;
 
+  --theme-ok-color: #1ae477;
+  --theme-warning-color: #f7c411;
+  --theme-danger-color: #f45e67;
+
   --theme-body-color: #202020;
   --theme-card-color: rgba(23, 23, 23, 0.6);
   --theme-modal-bg: #202020;
