--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -11,6 +11,10 @@
   --theme-text-color: #000;
   --theme-light-text-color: #666;
 
+  --theme-ok-color: #1ae477;
+  --theme-warning-color: #f7c411;
+  --theme-danger-color: #f45e67;
+
   --theme-body-color: #f8f8f9;
   --theme-card-color: rgba(255, 255, 255, 0.6);
   --theme-modal-bg: #ffff;
