getting started improvements
Signed-off-by: Paterson <86971279+paterson1@users.noreply.github.com>

--- a/src/components/custom/getting-started-wizard/s.module.scss
+++ b/src/components/custom/getting-started-wizard/s.module.scss
@@ -13,6 +13,13 @@
   }
 }
 
-.iconDisabled{
+.iconDisabled {
   filter: grayscale(100%);
+}
+
+.congrats {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
