--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -15,6 +15,8 @@
   --theme-warning-color: #f7c411;
   --theme-danger-color: #f45e67;
 
+  --theme-link-color: #914fe5;
+
   --theme-body-color: #202020;
   --theme-card-color: rgba(23, 23, 23, 0.6);
   --theme-modal-bg: #202020;
