(add) gradient button

--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -5,6 +5,7 @@
   --theme-color-4: #686868;
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
+  --theme-color-7: #ff7474;
 
   --theme-color-select: #171717;
 
