--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -5,11 +5,18 @@
   --theme-color-4: #686868;
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
+  --theme-color-7: #ff7474;
 
   --theme-color-select: #171717;
 
   --theme-text-color: #fff;
   --theme-light-text-color: #b5b5b5;
+
+  --theme-ok-color: #1ae477;
+  --theme-warning-color: #f7c411;
+  --theme-danger-color: #f45e67;
+
+  --theme-link-color: #914fe5;
 
   --theme-body-color: #202020;
   --theme-card-color: rgba(23, 23, 23, 0.6);
