--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -5,11 +5,16 @@
   --theme-color-4: #686868;
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
+  --theme-color-7: #ff7474;
 
   --theme-color-select: #171717;
 
   --theme-text-color: #000;
   --theme-light-text-color: #666;
+
+  --theme-ok-color: #1ae477;
+  --theme-warning-color: #f7c411;
+  --theme-danger-color: #f45e67;
 
   --theme-body-color: #f8f8f9;
   --theme-card-color: rgba(255, 255, 255, 0.6);
