--- a/pages/open-position/s.module.scss
+++ b/pages/open-position/s.module.scss
@@ -5,5 +5,10 @@
   margin-bottom: 24px;
 }
 
-.active {
+.title {
+  color: var(--theme-text-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  margin: 0 0 34px;
 }
