--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -6,6 +6,7 @@
   --theme-color-5: #505050;
   --theme-color-6: #ff5c87;
   --theme-color-7: #ff7474;
+  --theme-color-8: #2e2e2f;
 
   --theme-color-select: #171717;
 
