--- a/src/components/custom/toggle-switch/s.module.scss
+++ b/src/components/custom/toggle-switch/s.module.scss
@@ -1,4 +1,26 @@
 .component {
-  span {
+  align-items: center;
+  display: flex;
+  gap: 18px;
+
+  :global(.ant-switch.ant-switch) {
+    &[aria-checked='false'] {
+      background-color: var(--theme-color-8);
+    }
+
+    &[aria-checked='true'] {
+      background-image: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
+    }
+
+    :global(.ant-switch-handle::before) {
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15), 0 3px 1px rgba(0, 0, 0, 0.06);
+    }
   }
+}
+
+.label {
+  color: var(--theme-text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.2;
 }
