--- a/src/components/antd/popover/s.module.scss
+++ b/src/components/antd/popover/s.module.scss
@@ -1,30 +1,13 @@
 @import 'src/styles/text';
 
-.overlay:global(.ant-popover) {
-  :global(.ant-popover-inner) {
-    background: var(--theme-card-color);
-    border-radius: 12px;
+.component {
+  &:global(.ant-popover .ant-popover-inner) {
+    background-color: var(--theme-body-color);
+    border-radius: 8px;
+    border: 1px solid var(--theme-border-color);
+    box-shadow: 0 4px 50px rgba(0, 0, 0, 0.5);
   }
-
-  :global(.ant-popover-arrow) {
-    border-color: var(--theme-card-color);
-    display: none;
-  }
-
-  :global(.ant-popover-title) {
-    @include font-p1-semi-bold;
-    padding: 24px;
-    border-bottom: 1px solid var(--theme-border-color);
-    color: var(--theme-primary-color);
-  }
-
-  :global(.ant-popover-inner-content) {
-    padding: 24px;
-  }
-
-  &.noPadding {
-    :global(.ant-popover-inner-content) {
-      padding: 0;
-    }
+  &:global(.ant-popover .ant-popover-inner-content) {
+    padding: 20px;
   }
 }
