(update) some elements according to the last final never will modified again design

--- a/pages/open-position/s.module.scss
+++ b/pages/open-position/s.module.scss
@@ -36,7 +36,7 @@
 .fitersGrid {
   display: grid;
   gap: 12px;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   margin-bottom: 25px;
 }
 
