--- a/src/components/custom/info-block/s.module.scss
+++ b/src/components/custom/info-block/s.module.scss
@@ -4,18 +4,33 @@
   padding: 24px;
 }
 
+.titleWrapper {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 10px;
+}
+
 .title {
   color: var(--theme-light-text-color);
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2;
-  margin: 0 0 10px;
+  margin: 0 auto 0 0;
+}
+
+.link {
+  text-decoration: none;
+
+  &:active {
+    opacity: 0.8;
+  }
 }
 
 .value {
   color: var(--theme-text-color);
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.2;
   margin: 0 0 5px;
 
