--- a/src/components/custom/info-block/s.module.scss
+++ b/src/components/custom/info-block/s.module.scss
@@ -1,7 +1,8 @@
 .component {
   background-color: var(--theme-card-color);
+  border: 1px solid var(--theme-border-color);
   border-radius: 8px;
-  padding: 24px;
+  padding: 20px 24px;
 }
 
 .titleWrapper {
