(Feature) Open position styles (#72)
* (fix) table overflow

* (fix) blocks width

* (update) table styles a bit

* (make) some columns responsive

* (add) cell value component

* (add) more table styles

* (fix) naming

* (add) positions at risk table wrapper

* (add) address component

* (add) responsive columns

* (add) gradient button

* (remove) unused dependency

* (fix) button styles

* (add) button icon

* (fix) filter toggling

* (add) title

* (add) switch

* (add) filter popover

* (update) connect button

* (fix) element logo

* (add) popover styles and functionality

* (update) some elements according to the last final never will modified again design

* (fix) linting

--- a/pages/open-position/s.module.scss
+++ b/pages/open-position/s.module.scss
@@ -1,17 +1,62 @@
-.filterWrapper {
-  margin: 2rem 0;
-  :global(.ant-btn-round) {
-    svg {
-      margin-right: 1rem;
-    }
+@import '/src/styles/vars';
+
+.filters {
+  align-items: center;
+  display: flex;
+  gap: 16px;
+  margin-bottom: 24px;
+
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    display: none;
   }
 }
 
-.pill {
-  background-color: transparent;
-  border-color: var(--theme-border-color);
-  margin-right: 1rem;
-  &.active {
-    background: linear-gradient(90deg, rgba(255, 149, 116, 0.1) 0%, rgba(255, 76, 140, 0.1) 100%);
+.title {
+  color: var(--theme-text-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  margin: 0 0 34px;
+}
+
+.switch {
+  margin-left: auto;
+}
+
+.filtersButton {
+  display: none;
+
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    display: flex;
+    max-width: fit-content;
+    margin-bottom: 24px;
+  }
+}
+
+.fitersGrid {
+  display: grid;
+  gap: 12px;
+  grid-template-columns: 1fr;
+  margin-bottom: 25px;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.clear {
+  background: transparent;
+  border: none;
+  color: var(--theme-text-color);
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  margin: 0 auto;
+  padding: 0;
+  text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
   }
 }
