--- a/src/styles/theme-light.scss
+++ b/src/styles/theme-light.scss
@@ -7,6 +7,7 @@
   --theme-color-6: #ff5c87;
   --theme-color-7: #ff7474;
   --theme-color-8: #2e2e2f;
+  --theme-color-9: #e1e1e1;
 
   --theme-color-select: #171717;
 
