--- a/pages/open-position/[collateralId]/open/s.module.scss
+++ b/pages/open-position/[collateralId]/open/s.module.scss
@@ -83,7 +83,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .balanceLabel {
@@ -114,4 +114,57 @@
   padding: 0;
 
   @include text-gradient();
+}
+
+.fiatWrapper {
+  background: linear-gradient(90deg, var(--theme-color-2), var(--theme-color-3));
+  border-radius: 4px;
+  margin-bottom: 24px;
+}
+
+.fiatWrapperTop {
+  background-color: transparent;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border: 1px solid transparent;
+  cursor: pointer;
+  height: 35px;
+  padding: 0;
+  width: 100%;
+}
+
+.fiatWrapperTopInner {
+  align-items: center;
+  background-color: rgb(23, 23, 23);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  display: flex;
+  gap: 8px;
+  height: 100%;
+  justify-content: center;
+  padding: 0;
+  width: 100%;
+
+  > span {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-transform: capitalize;
+
+    @include text-gradient();
+  }
+}
+
+.fiatWrapperContents {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border: 1px solid transparent;
+  border-top: none;
+}
+
+.fiatWrapperContentsInner {
+  background-color: rgb(23, 23, 23);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 15px;
 }
