--- a/pages/open-position/[collateralId]/open/s.module.scss
+++ b/pages/open-position/[collateralId]/open/s.module.scss
@@ -187,14 +187,14 @@
   }
 }
 
-.summaryRowTitle {
+.summaryTitle {
   color: var(--theme-light-text-color);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.2;
 }
 
-.summaryRowValue {
+.summaryValue {
   color: var(--theme-text-color);
   font-size: 14px;
   font-weight: 600;
@@ -211,4 +211,28 @@
   &.danger {
     color: var(--theme-danger-color);
   }
+}
+
+.lastStepTitle {
+  color: var(--theme-text-color);
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.2;
+  margin: 0 0 6px;
+  text-align: center;
+}
+
+.lastStepText {
+  color: var(--theme-color-9);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.2;
+  margin: 0 0 24px;
+  text-align: center;
+}
+
+.lastStepAnimation {
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
