--- a/pages/open-position/[collateralId]/open/s.module.scss
+++ b/pages/open-position/[collateralId]/open/s.module.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/text-gradient';
+@import '/src/styles/vars';
 
 .mainContainer {
   --gap: 24px;
@@ -7,12 +8,20 @@
   gap: var(--gap);
   grid-template-columns: 1fr minmax(400px, 1fr);
   padding-top: 25px;
+
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .infoBlocks {
   display: grid;
   gap: var(--gap);
   grid-template-columns: 1fr 1fr;
+
+  @media (max-width: #{$max-width-mobile}) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .formWrapper {
