--- a/src/components/custom/info-block/s.module.scss
+++ b/src/components/custom/info-block/s.module.scss
@@ -1,7 +1,16 @@
 .component {
   background-color: var(--theme-card-color);
+  border: 1px solid var(--theme-border-color);
   border-radius: 8px;
-  padding: 24px;
+  padding: 20px 24px;
+}
+
+.titleWrapper {
+  align-items: flex-start;
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  margin: 0 0 10px;
 }
 
 .title {
@@ -9,13 +18,21 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2;
-  margin: 0 0 10px;
+  margin: 0 auto 0 0;
+}
+
+.link {
+  text-decoration: none;
+
+  &:active {
+    opacity: 0.8;
+  }
 }
 
 .value {
   color: var(--theme-text-color);
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.2;
   margin: 0 0 5px;
 
