--- a/src/components/custom/token-amount/s.module.scss
+++ b/src/components/custom/token-amount/s.module.scss
@@ -1,22 +1,66 @@
 .component {
+  --group-height: 62px;
+
   :global(.ant-input-group) {
-    height: 64px;
+    border-radius: 4px;
+    border: 1px solid var(--theme-border-color);
+    height: var(--group-height);
+    margin-bottom: 12px;
 
     :global(.ant-input) {
-      height: 64px;
+      height: var(--group-height);
     }
 
     :global(.ant-input-group-addon) {
       &:first-of-type {
-        width: 64px;
-        padding: 0 20px;
+        background-color: transparent;
+        border-right-color: var(--theme-border-color);
+        height: var(--group-height);
+        padding: 0;
+        width: var(--group-height);
+      }
+    }
+
+    :global(.ant-input-group-addon) {
+      &:last-of-type {
+        background-color: transparent;
+        height: var(--group-height);
       }
     }
   }
 }
 
-.maxBtn {
-  @media (max-width: 767px) {
-    padding: 14px;
-  }
+.iconsWrapper {
+  align-items: center;
+  display: flex;
+  height: var(--group-height);
+  justify-content: center;
+  width: var(--group-height);
+}
+
+.healthFactorWrapper {
+  align-items: center;
+  display: flex;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 6px;
+}
+
+.safer {
+  color: var(--theme-color-10);
+  margin-right: auto;
+}
+
+.healthFactor {
+  align-items: center;
+  color: var(--theme-color-9);
+  display: grid;
+  gap: 6px;
+  grid-template-columns: 1fr 16px;
+}
+
+.riskier {
+  color: var(--theme-color-11);
+  margin-left: auto;
 }
