--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -7,6 +7,9 @@
   --theme-color-6: #ff5c87;
   --theme-color-7: #ff7474;
   --theme-color-8: #2e2e2f;
+  --theme-color-9: #e1e1e1;
+  --theme-color-10: #6cd373;
+  --theme-color-11: #fe4e8b;
 
   --theme-color-select: #171717;
 
