--- a/pages/your-positions/s.module.scss
+++ b/pages/your-positions/s.module.scss
@@ -1,16 +1,7 @@
-.pill {
-  background-color: transparent;
-  border-color: var(--theme-border-color);
-}
-
-.card {
-  background: var(--theme-border-color);
-  padding: 1em;
-  margin: 1em;
-  border-radius: 1em;
-  border-width: 2px;
-}
-
-.title {
-  color: grey;
+.tabs {
+  margin-bottom: 20px;
+  margin-left: calc(var(--content-padding) * -1);
+  margin-right: calc(var(--content-padding) * -1);
+  padding-left: var(--content-padding);
+  padding-right: var(--content-padding);
 }
