--- a/pages/open-position/[collateralId]/open/s.module.scss
+++ b/pages/open-position/[collateralId]/open/s.module.scss
@@ -1,32 +1,7 @@
 @import 'src/styles/text-gradient';
 @import '/src/styles/vars';
 
-.mainContainer {
-  --gap: 24px;
-
-  display: grid;
-  gap: var(--gap);
-  grid-template-columns: 1fr minmax(400px, 1fr);
-  padding-top: 25px;
-
-  @media (max-width: #{$max-width-tablet-portrait}) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.infoBlocks {
-  display: grid;
-  gap: var(--gap);
-  grid-template-columns: 1fr 1fr;
-
-  @media (max-width: #{$max-width-mobile}) {
-    grid-template-columns: 1fr;
-  }
-}
-
 .formWrapper {
-  --common-padding: 24px;
-
   background-color: var(--theme-card-color);
   border: 1px solid var(--theme-border-color);
   border-radius: 8px;
@@ -34,7 +9,7 @@
 
 .stepperWrapper {
   border-bottom: 1px solid var(--theme-border-color);
-  padding: 16px var(--common-padding) var(--common-padding);
+  padding: 16px var(--theme-common-card-padding) var(--theme-common-card-padding);
 }
 
 .stepperTitleWrapper {
@@ -81,38 +56,11 @@
 }
 
 .form {
-  padding: var(--common-padding) var(--common-padding) 28px;
+  padding: var(--theme-common-card-padding) var(--theme-common-card-padding) 28px;
 }
 
 .radioTabsWrapper {
   margin-bottom: 20px;
-}
-
-.balanceWrapper {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 5px;
-}
-
-.balanceLabel {
-  color: var(--theme-text-color);
-  font-size: 12px;
-  font-weight: 500;
-  margin: 0;
-}
-
-.balance {
-  color: var(--theme-light-text-color);
-  font-size: 12px;
-  font-weight: 500;
-  margin: 0;
-}
-
-.buttonsWrapper {
-  display: grid;
-  gap: 24px;
-  grid-template-columns: 1fr;
 }
 
 .backButton {
@@ -123,103 +71,6 @@
   padding: 0;
 
   @include text-gradient();
-}
-
-.fiatWrapper {
-  background: linear-gradient(90deg, var(--theme-color-2), var(--theme-color-3));
-  border-radius: 4px;
-  margin-bottom: 24px;
-}
-
-.fiatWrapperTop {
-  background-color: transparent;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border: 1px solid transparent;
-  cursor: pointer;
-  height: 35px;
-  padding: 0;
-  width: 100%;
-}
-
-.fiatWrapperTopInner {
-  align-items: center;
-  background-color: rgb(23, 23, 23);
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  display: flex;
-  gap: 8px;
-  height: 100%;
-  justify-content: center;
-  padding: 0;
-  width: 100%;
-
-  > span {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.2;
-    text-transform: capitalize;
-
-    @include text-gradient();
-  }
-}
-
-.fiatWrapperContents {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border: 1px solid transparent;
-  border-top: none;
-}
-
-.fiatWrapperContentsInner {
-  background-color: rgb(23, 23, 23);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding: 15px;
-}
-
-.summary {
-  border-radius: 4px;
-  border: 1px solid var(--theme-border-color);
-  margin-bottom: 24px;
-  padding: 16px;
-}
-
-.summaryRow {
-  align-items: flex-start;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.summaryTitle {
-  color: var(--theme-light-text-color);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.2;
-}
-
-.summaryValue {
-  color: var(--theme-text-color);
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1.2;
-
-  &.ok {
-    color: var(--theme-ok-color);
-  }
-
-  &.warning {
-    color: var(--theme-warning-color);
-  }
-
-  &.danger {
-    color: var(--theme-danger-color);
-  }
 }
 
 .lastStepTitle {
