--- a/src/components/custom/menu/s.module.scss
+++ b/src/components/custom/menu/s.module.scss
@@ -91,3 +91,37 @@
   justify-content: center;
   width: var(--dimensions);
 }
+
+.badge {
+  --dimensions: 24px;
+
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 149, 116, 0.5) 0%,
+    rgba(255, 76, 140, 0.5) 100%
+  );
+  border-radius: var(--button-border-radius);
+  display: block;
+  height: var(--dimensions);
+  margin-left: auto;
+  margin-right: 10px;
+  min-width: var(--dimensions);
+}
+
+.badgeInner {
+  border-radius: var(--button-border-radius);
+  border: 1px solid transparent;
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+.badgeBackground {
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: var(--button-border-radius);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
