--- a/src/components/antd/button-gradient/s.module.scss
+++ b/src/components/antd/button-gradient/s.module.scss
@@ -11,8 +11,8 @@
     height: var(--button-height);
     justify-content: center;
     line-height: 1.2;
-    padding-bottom: 0;
-    padding-top: 0;
+    padding-bottom: 0 !important;
+    padding-top: 0 !important;
     position: relative;
     width: 100%;
 
