--- a/src/components/antd/button-outline-gradient/s.module.scss
+++ b/src/components/antd/button-outline-gradient/s.module.scss
@@ -32,8 +32,10 @@
       height: 100%;
       justify-content: center;
       line-height: 1.2;
+      padding-bottom: 0 !important;
       padding-left: 25px;
       padding-right: 25px;
+      padding-top: 0 !important;
       position: relative;
       text-transform: capitalize;
       width: 100%;
