(Chore) Several tasks (#104)
Co-authored-by: fernandomg <fernando.greco@gmail.com>

--- a/src/components/custom/asset/s.module.scss
+++ b/src/components/custom/asset/s.module.scss
@@ -1,7 +1,9 @@
 .component {
-  --asset-icon-dimensions: 20px;
-
+  align-items: center;
   column-gap: 8px;
-  display: grid;
-  grid-template-columns: var(--asset-icon-dimensions) 1fr;
+  display: flex;
+}
+
+.title {
+  white-space: nowrap;
 }
