--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,14 +15,15 @@
 @import 'flex';
 @import 'grid';
 @import 'layout';
-@import 'text-gradient';
 @import 'notifications';
+@import 'pagination';
 @import 'rechart';
 @import 'slider';
 @import 'spin';
 @import 'steps';
 @import 'switch';
 @import 'text';
+@import 'text-gradient';
 @import 'utils';
 @import 'walletConnect';
 
