--- a/src/components/custom/header/s.module.scss
+++ b/src/components/custom/header/s.module.scss
@@ -40,66 +40,8 @@
 .endWrapper {
   align-items: center;
   display: flex;
+  gap: 8px;
   margin-left: auto;
-  gap: 16px;
-}
-
-.mobileButton {
-  --width: 32px;
-
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  display: none;
-  height: 48px;
-  justify-content: center;
-  padding: 0;
-  width: var(--width);
-
-  @media (max-width: #{$max-width-mobile}) {
-    display: flex;
-  }
-
-  &:active {
-    opacity: 0.5;
-  }
-}
-
-.burguerMenuButton {
-  display: block;
-  height: 100%;
-  position: relative;
-  width: 100%;
-
-  .line {
-    background-color: #fff;
-    display: block;
-    height: 2px;
-    transform-origin: 50%;
-    transition: all 0.3s ease-in-out;
-    width: var(--width);
-    position: absolute;
-    left: 0;
-  }
-
-  .line1 {
-    top: 21px;
-  }
-
-  .line2 {
-    top: 27px;
-  }
-
-  &.isDrawerVisible {
-    .line1 {
-      top: 50%;
-      transform: rotate(45deg);
-    }
-    .line2 {
-      top: 50%;
-      transform: rotate(-45deg);
-    }
-  }
 }
 
 .drawer {
@@ -122,5 +64,11 @@
 
   .sideMenuFooter {
     margin-top: auto;
+  }
+}
+
+.infoButton {
+  @media (max-width: #{$max-width-tablet-portrait}) {
+    display: none !important;
   }
 }
