adds the following changes
adds the HF values in each form

adds standard HF calculation function in wranglePosition file

adds the handlers to calculate max values for HF in each form ATM not working

adds the onSubmit function to call the modifyCollateralAndNormalDebt function in hook

removes some comments

--- a/pages/your-positions/[positionId]/manage/s.module.scss
+++ b/pages/your-positions/[positionId]/manage/s.module.scss
@@ -1,3 +1,11 @@
 .top {
   padding: var(--theme-common-card-padding) var(--theme-common-card-padding) 28px;
 }
+.summary {
+  padding: 24px 0 0 0;
+}
+
+.component {
+  padding: 0 var(--theme-common-card-padding) var(--theme-common-card-padding)
+    var(--theme-common-card-padding);
+}
