--- a/src/components/custom/connected-wallet/s.module.scss
+++ b/src/components/custom/connected-wallet/s.module.scss
@@ -69,6 +69,10 @@
   font-weight: 600;
 }
 
+.proxyCardAddress:hover {
+  color: var(--theme-text-color);
+}
+
 .itemIcon {
   color: var(--theme-icon-color);
 }
