--- a/pages/your-positions/[positionId]/manage/s.module.scss
+++ b/pages/your-positions/[positionId]/manage/s.module.scss
@@ -1,3 +1,19 @@
 .top {
   padding: var(--theme-common-card-padding) var(--theme-common-card-padding) 28px;
 }
+.summary {
+  padding: 24px 0 0 0;
+}
+
+.component {
+  padding: 0 var(--theme-common-card-padding) var(--theme-common-card-padding)
+    var(--theme-common-card-padding);
+}
+
+.tabs {
+  margin-bottom: var(--theme-common-card-padding);
+  margin-left: calc(var(--theme-common-card-padding) * -1);
+  margin-right: calc(var(--theme-common-card-padding) * -1);
+  padding-left: var(--theme-common-card-padding);
+  padding-right: var(--theme-common-card-padding);
+}
