--- a/src/components/custom/side-menu-footer/s.module.scss
+++ b/src/components/custom/side-menu-footer/s.module.scss
@@ -59,6 +59,13 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.sha {
+.metadata {
   color: var(--theme-secondary-color);
+}
+
+.metadataButton {
+  color: var(--theme-secondary-color);
+  background: transparent;
+  border: 0;
+  float: right;
 }
