Fixes #182, update log contracts button position (#283)
* Fixes #182, update log contracts button position

* Update s.module.scss

Co-authored-by: Alex <3254549+alexleventer@users.noreply.github.com>

--- a/src/components/custom/side-menu-footer/s.module.scss
+++ b/src/components/custom/side-menu-footer/s.module.scss
@@ -59,6 +59,13 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.sha {
+.metadata {
   color: var(--theme-secondary-color);
+}
+
+.metadataButton {
+  background: transparent;
+  color: var(--theme-secondary-color);
+  border: 0;
+  float: right;
 }
