add FIAT icon in the table

--- a/pages/auctions/s.module.scss
+++ b/pages/auctions/s.module.scss
@@ -60,3 +60,10 @@
     text-decoration: none;
   }
 }
+
+.icon-in-table {
+  border-radius: 0;
+  border: 1px solid var(--theme-border-color);
+  padding: 0;
+
+}
