(Fix) [Auctions] Liquidate flow (#330)

--- a/pages/auctions/s.module.scss
+++ b/pages/auctions/s.module.scss
@@ -33,7 +33,7 @@
   }
 }
 
-.fitersGrid {
+.filtersGrid {
   display: grid;
   gap: 12px;
   grid-template-columns: 1fr;
@@ -59,4 +59,11 @@
   &:hover {
     text-decoration: none;
   }
+}
+
+.iconInTable {
+  border-radius: 0;
+  border: 0;
+  padding: 0;
+
 }
