mobile hamburger menu to the left

--- a/src/components/custom/header/s.module.scss
+++ b/src/components/custom/header/s.module.scss
@@ -16,6 +16,7 @@
     }
 
     :local(.logoWrapper) {
+      margin-left: 16px;
       display: none;
 
       @media (max-width: #{$max-width-mobile}) {
