fix 1 active tab indicator to the right

--- a/src/components/custom/menu/s.module.scss
+++ b/src/components/custom/menu/s.module.scss
@@ -64,7 +64,7 @@
       background: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
       bottom: 0;
       content: '';
-      left: 0;
+      right: 0;
       position: absolute;
       top: 0;
       width: 4px;
