button fonts all inter, weight 700 (bold)

--- a/src/components/antd/button-outline-gradient/s.module.scss
+++ b/src/components/antd/button-outline-gradient/s.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/text';
+
 .background {
   align-items: center;
   background-image: linear-gradient(90deg, var(--theme-color-2) 0%, var(--theme-color-3) 100%);
@@ -27,7 +29,8 @@
       color: var(--theme-text-color);
       display: flex;
       font-size: 14px;
-      font-weight: 500;
+      font-family: var(--font-family);
+      font-weight: 700;
       gap: 8px;
       height: 100%;
       justify-content: center;
