--- a/src/components/custom/form-extra-action/s.module.scss
+++ b/src/components/custom/form-extra-action/s.module.scss
@@ -1,4 +1,5 @@
 @import 'src/styles/text-gradient';
+@import 'src/styles/text';
 
 .component {
   background: linear-gradient(90deg, var(--theme-color-2), var(--theme-color-3));
@@ -31,7 +32,8 @@
 
   > span {
     font-size: 14px;
-    font-weight: 500;
+    font-family: var(--font-family);
+    font-weight: 700;
     line-height: 1.2;
     text-transform: capitalize;
 
