adjust subtitle text

--- a/pages/auctions/[auctionId]/buy/s.module.scss
+++ b/pages/auctions/[auctionId]/buy/s.module.scss
@@ -77,7 +77,7 @@
 }
 
 .stepperDescription {
-  color: var(--theme-color-9);
+  color: var(--theme-dark-text-color);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.2;
