--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -15,6 +15,7 @@
 
   --theme-text-color: #fff;
   --theme-light-text-color: #b5b5b5;
+  --theme-dark-text-color: #838693; // useful for subtitles
 
   --theme-ok-color: #1ae477;
   --theme-warning-color: #f7c411;
