Quick UI Fixes (#496)
* mobile hamburger menu to the left

* fix 1 active tab indicator to the right

* button fonts all inter, weight 700 (bold)

* hide clear button on Create Position when no filters to clear

* swap Your Positions and Create Position

* In my wallet -> Assets in my wallet

* remove unused dashboard route

* adjust subtitle text

* white for tx hash link color

* change card opacity from .6 to .88

* (wip) move relevant sass for tokenAmount slider into TokenAmount comp

* pretty sexy and efficient color changing slider

* remove unused props

* remove health factor color checking

* pin next version & relint

--- a/src/styles/theme-dark.scss
+++ b/src/styles/theme-dark.scss
@@ -15,15 +15,16 @@
 
   --theme-text-color: #fff;
   --theme-light-text-color: #b5b5b5;
+  --theme-dark-text-color: #838693; // useful for subtitles
 
   --theme-ok-color: #1ae477;
   --theme-warning-color: #f7c411;
   --theme-danger-color: #f45e67;
 
-  --theme-link-color: #914fe5;
+  --theme-link-color: #ffffff;
 
   --theme-body-color: #202020;
-  --theme-card-color: rgba(23, 23, 23, 0.6);
+  --theme-card-color: rgba(23, 23, 23, 0.88);
   --theme-modal-bg: #202020;
   --theme-amount-color: #171717;
   --theme-overlay-color: #171717;
@@ -52,6 +53,6 @@
     rgba(37, 32, 33, 0.8) 0%,
     rgba(34, 32, 32, 0.8) 100%
   );
-  --theme-leaderboard-table-item: rgba(23, 23, 23, 0.6);
+  --theme-leaderboard-table-item: rgba(23, 23, 23, 0.88);
   --theme-leaderboard-counter-item: rgba(23, 23, 23, 0.7);
 }
