--- a/src/components/custom/token-amount/s.module.scss
+++ b/src/components/custom/token-amount/s.module.scss
@@ -28,6 +28,67 @@
       }
     }
   }
+
+  ////////////////////
+
+  --rail-height: 8px;
+  --border-radius: 16px;
+
+  :global(.ant-slider-rail),
+  &:global(.ant-slider:hover .ant-slider-rail) {
+    background-color: var(--theme-secondary-block);
+    border-radius: var(--border-radius);
+    height: var(--rail-height);
+  }
+
+  :global(.ant-slider-track),
+  &:global(.ant-slider:hover .ant-slider-track) {
+    background-image: var(--gradient-secondary-pink);
+    border-radius: var(--border-radius);
+    height: var(--rail-height);
+  }
+
+  :global(.ant-slider-step) {
+    height: var(--rail-height);
+  }
+
+  :global(.ant-slider-handle) {
+    --dimensions: 34px;
+
+    background: var(--gradient-secondary-pink);
+    border-radius: 50%;
+    border: 4px solid var(--theme-amount-color);
+    height: var(--dimensions);
+    margin-top: -13px;
+    width: var(--dimensions);
+
+    &::after {
+      background: var(--theme-amount-color);
+      border-radius: 50%;
+      content: '';
+      display: block;
+      height: 8px;
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 8px;
+    }
+  }
+
+  &.healthFactorVariantReverse {
+    :global(.ant-slider-track),
+    &:global(.ant-slider:hover .ant-slider-track) {
+      background-image: none;
+    }
+  }
+  
+  &.healthFactorVariant {
+    :global(.ant-slider-track),
+    &:global(.ant-slider:hover .ant-slider-track) {
+      background-image: none;
+    }
+  }
 }
 
 .iconsWrapper {
